<resources>
    <string name="app_name">HashContact</string>
    <string name="facebook_app_id">1302198206657743</string>
    <string name="fb_login_protocol_scheme">fb1302198206657743</string>
<string name="service_desc">Accessibilty Service</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_journal_message">Say the message</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open navigation drawer></string>
    <string name="close">Close navigation drawer></string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="upvote">Upvote</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="downvote">Downvote</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
