<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background=" #7f00ff"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/nav_head"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        app:cardCornerRadius="40dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        />
    </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="Hash User ID:" />

        <TextView
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:textIsSelectable="true"
            android:longClickable="true"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/OpenSansTextStyle" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
